force-app/main/default/objects/Account/fields/tim__c.field-meta.xml
<CustomField>
    <fullName>tim__c</fullName>
    <formula>TIMEVALUE( timesnow__c -25200000/60000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tim</label>
    <type>Time</type>
</CustomField>