force-app/main/default/objects/Account/fields/timesnow__c.field-meta.xml
<CustomField>
    <fullName>timesnow__c</fullName>
    <label>timesnow</label>
    <type>DateTime</type>
</CustomField>