force-app/main/default/objects/Account/recordTypes/Record_Type_1.recordType-meta.xml
<RecordType>
    <fullName>Record_Type_1</fullName>
    <active>true</active>
    <description>Record Type 1 on Account</description>
    <label>Record Type 1</label>
</RecordType>