force-app/main/default/objects/Account/recordTypes/Record_Type_2.recordType-meta.xml
<RecordType>
    <fullName>Record_Type_2</fullName>
    <active>true</active>
    <description>Record Type  2 on Account</description>
    <label>Record Type 2</label>
</RecordType>