force-app/main/default/objects/Account/recordTypes/Record_Type_3.recordType-meta.xml
<RecordType>
    <fullName>Record_Type_3</fullName>
    <active>true</active>
    <description>Record Type  3 on Account</description>
    <label>Record Type 3</label>
</RecordType>